add proxy value in package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "job-application-tracker-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://apricot-clam-robe.cyclic.app",
   "dependencies": {
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
